<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">串口小工具</string>
    <string name="serialport_label_str">串  口：</string>
    <string name="baudrate_label_str">波特率：</string>
    <string name="connect_str">连接</string>
    <string name="disconnect_str">断开</string>
    <string name="send_data_label_str">发送的数据：</string>
    <string name="send_str">发送</string>
    <string name="clear_send_str">清除</string>
    <string name="receive_data_label_str">接收的数据：</string>
    <string name="receive_clear_str">清除</string>
    <string name="open_failed_str">打开失败</string>
</resources>
