<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_centerInParent="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cn.feichao.tools.serialporttool.MainActivity">

    <TextView
        android:id="@+id/serilport_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/serialport"
        android:text="@string/serialport_label_str" />

    <TextView
        android:id="@+id/baudrate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/baudrate"
        android:text="@string/baudrate_label_str" />

    <Button
        android:text="@string/connect_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baudrate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/connect" />


    <EditText
        android:id="@+id/send_data"
        android:text="55 00 07 01 02 00 00 00"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerVertical="false"
        android:layout_below="@+id/send_data_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/send_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/send" />

    <Button
        android:text="@string/clear_send_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/send_data"
        android:layout_toRightOf="@+id/send"
        android:layout_toEndOf="@+id/send"
        android:id="@+id/clear_send" />

    <EditText
        android:id="@+id/receive_data"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/receive_radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:editable="false"/>

    <Button
        android:text="@string/receive_clear_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/receive_data"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/receive_clear" />

    <Spinner
        android:id="@+id/serialport"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/baudrate_label"
        android:layout_toEndOf="@+id/baudrate_label" />

    <Spinner
        android:id="@+id/baudrate"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@+id/serialport"
        android:layout_toRightOf="@+id/baudrate_label"
        android:layout_toEndOf="@+id/baudrate_label" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/send_radioGroup"
        android:checkedButton="@+id/send_hex"
        android:layout_below="@+id/connect"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:text="hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_hex" />

        <RadioButton
            android:text="ASCII"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_ascii" />

    </RadioGroup>

    <TextView
        android:text="@string/send_data_label_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/send_data_label"
        android:layout_alignBottom="@+id/send_radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/receive_radioGroup"
        android:checkedButton="@+id/receive_hex"
        android:layout_below="@+id/clear_send"
        android:layout_alignLeft="@+id/send_radioGroup"
        android:layout_alignStart="@+id/send_radioGroup">

        <RadioButton
            android:text="hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receive_hex" />

        <RadioButton
            android:text="ASCII"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receive_ascii" />

    </RadioGroup>

    <TextView
        android:text="@string/receive_data_label_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/receive_data_label"
        android:layout_alignBottom="@+id/receive_radioGroup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
